@@ -127,6 +127,9 @@ None.
     Netfilter releases which disallow the owner match in rules
     reachable from the INPUT and FORWARD hooks.
 
+3)  Internals Change: The Policy.pm module has been merged into the
+    Rules.pm module.
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
