@@ -4,6 +4,10 @@ Changes in Shorewall 4.4.18 Beta 4
 
 2)  Change default value of MODULE_PREFIX.
 
+3)  Combine Policy and Rules Modules
+
+4)  Move section processing to the Rules modules.
+
 Changes in Shorewall 4.4.18 Beta 3
 
 1)  Change default chain in FORWARD section of the accounting file.
